  split out into a seperate package, snakeoil. This includes the relevant cpy
  extensions.

* Triggers are quieter about what they're doing by default.

* /etc/portage/package.* can now contain unlimited subdirectories and
  files (ticket 71).

* livefs functionality is no longer accessible in pkgcore.fs.*; have to access
  pkgcore.fs.livefs.*


pkgcore 0.2.14:

* correct potential for profile path calculation screwup.

* refactor isolated-functions.sh so all internal vars are prefixed with
  PKGCORE_RC_; shift vars filter to PKGCORE_RC_.* instead of RC_.* .
  If you were having problems building courier-imap (RC_VER variable),
  this fixes it.

* better interop with paludis VDB environment dumps.

* treat RESTRICT as a straight depset for UI purposes (minor, but looks
  better this way).


pkgcore 0.2.13:

* Added '~' to allowed shlex word chars.

* Due to amd64 /lib -> /lib64, change the default policy for sym over
  directory merging to allow it if the target was a directory.


pkgcore 0.2.12:

* Ensure PackageRestriction._handle_exceptions filters the check down to
  just strings; if running pure python, this could trigger a traceback
  via the python native native_CPV.__cmp__.

* Tweak python native native_CPV.__cmp__ to not explode if given an instance
  that's not a CPV derivative.

* Reorder ||() to use anything matched via the current state graph, aside
  from normal reordering to prefer vdb.

* default mode for ensure_dirs is now 0755.

* Work around broken java-utils-2.eclass state handling in
  java-pkg_init_paths_; tries to access DESTTREE in setup phase, which
  shouldn't be allowed- fix is temporarily shifting the DESTTREE definition
  to pre-ebuild sourcing so that it behaves.

  Will be removed as soon as the eclass behaves is fixed.


pkgcore 0.2.11:

* COLON_SEPARATED, not COLON_SEPERATED for env.d parsing.

* fix ticket #74; "x=y@a" should parse out as 'y@a', was terminating
  early.


pkgcore 0.2.10:
